# 2DWOW

./: CMakeLists.txt  main.cpp
art/: character.atlas  main.atlas
art/character/: pack_atlas.bat
art/main/: pack_atlas.bat
