cmake_minimum_required(VERSION 3.16.4)

project(2DWOW)

add_definitions(-W0 -std:c++latest)

foreach(type ${CMAKE_CONFIGURATION_TYPES})
	string(TOUPPER ${type} type_u)
	string(TOLOWER ${type} type_l)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${type_u} "${CMAKE_SOURCE_DIR}/bin/${type_l}")
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${type_u} "${CMAKE_SOURCE_DIR}/bin/${type_l}")
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${type_u} "${CMAKE_SOURCE_DIR}/bin/${type_l}")
endforeach()

set(FLAME_DIR "" CACHE PATH "Flame Engine Dir")

add_definitions(-DFLAME_WINDOWS)

if (EXISTS "${dir}/pugixml")
	set(temp "${dir}/pugixml")
else()
	set(temp "")
endif()
set(PUGIXML_INCLUDE_DIR "${temp}/src" CACHE PATH "Pugi XML Directory")
set(PUGIXML_DEBUG_STATIC_LIBRARY_PATH "${temp}/build/Debug/pugixml.lib" CACHE FILEPATH "Pugi XML Debug STATIC Library Path")
set(PUGIXML_RELEASE_STATIC_LIBRARY_PATH "${temp}/build/Release/pugixml.lib" CACHE FILEPATH "Pugi XML Release STATIC Library Path")

if (EXISTS "${dir}/json")
	set(temp "${dir}/json")
else()
	set(temp "")
endif()
set(NJSON_INCLUDE_DIR "${temp}/include" CACHE PATH "NJson Include Directory")

add_executable(2DWOW main.cpp)
target_include_directories(2DWOW PRIVATE "${FLAME_DIR}/include")
target_include_directories(2DWOW PRIVATE "${PUGIXML_INCLUDE_DIR}")
target_include_directories(2DWOW PRIVATE "${NJSON_INCLUDE_DIR}")
target_link_libraries(2DWOW "${FLAME_DIR}/bin/debug/flame_foundation.lib")
target_link_libraries(2DWOW "${FLAME_DIR}/bin/debug/flame_graphics.lib")
target_link_libraries(2DWOW "${FLAME_DIR}/bin/debug/flame_sound.lib")
target_link_libraries(2DWOW "${FLAME_DIR}/bin/debug/flame_universe.lib")
add_custom_command(TARGET 2DWOW POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${FLAME_DIR}/bin/debug/flame_foundation.dll" "${CMAKE_SOURCE_DIR}/bin/debug")
add_custom_command(TARGET 2DWOW POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${FLAME_DIR}/bin/debug/flame_graphics.dll" "${CMAKE_SOURCE_DIR}/bin/debug")
add_custom_command(TARGET 2DWOW POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${FLAME_DIR}/bin/debug/flame_graphics.typeinfo" "${CMAKE_SOURCE_DIR}/bin/debug")
add_custom_command(TARGET 2DWOW POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${FLAME_DIR}/bin/debug/flame_sound.dll" "${CMAKE_SOURCE_DIR}/bin/debug")
add_custom_command(TARGET 2DWOW POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${FLAME_DIR}/bin/debug/flame_sound.typeinfo" "${CMAKE_SOURCE_DIR}/bin/debug")
add_custom_command(TARGET 2DWOW POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${FLAME_DIR}/bin/debug/flame_universe.dll" "${CMAKE_SOURCE_DIR}/bin/debug")
add_custom_command(TARGET 2DWOW POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${FLAME_DIR}/bin/debug/flame_universe.typeinfo" "${CMAKE_SOURCE_DIR}/bin/debug")
